--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "",
-	"appid": "",
+	"name": "uni-app",
+	"appid": "wxbcd485e99ec3630f",
 	"description": "",
 	"versionName": "1.0.0",
 	"versionCode": "100",
