--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
     "regenerator-runtime": "^0.12.1",
+    "validate": "^5.2.0",
     "vue": "^2.6.11",
     "vuex": "^3.2.0",
     "vuex-uniapp-persistence": "^1.0.0"
